--- a/.github/actions/python-maturin/test-examples/action.yml
+++ b/.github/actions/python-maturin/test-examples/action.yml
@@ -74,3 +74,4 @@ runs:
         echo "Running Python example tests..."
         # Run the examples script which will use the prebuilt server binary
         ./scripts/run-python-examples-from-readme.sh
+      shell: bash
