--- a/.github/actions/python-maturin/test-examples/action.yml
+++ b/.github/actions/python-maturin/test-examples/action.yml
@@ -50,7 +50,7 @@ runs:
         cd ../..
 
         # Install dependencies for examples
-        pip -r examples/python/requirements.txt
+        pip install -r examples/python/requirements.txt
       shell: bash
 
     - name: Build Python wheel for testing
